# MasterBandit

./: .gitignore  .gitmodules  APPLET.md  BENCHMARKING.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  PARSER_REWRITE.md  README.md  RENDER_THREADING.md  TODO.md  TREE_CUTOVER.md  vcpkg-configuration.json  vcpkg.json
assets/icon/: regen.sh
assets/scripts/: applet-loader.js  command-palette.js  default-ui.js
assets/scripts/modules/: dialog.js  tui.js
benches/: .gitattributes
benches/fixtures/: plain-1MB-crlf.txt  synth-colored-1MB-crlf.txt
examples/: embedded-demo.js  popup-demo.js  popup-tui-mouse-demo.js
overlay-ports/libwebsockets/: portfile.cmake  vcpkg.json
src/: Action.cpp  Action.h  Base64.h  Bindings.cpp  Bindings.h  BoxDrawingTable.h  CLIClient.cpp  CLIClient.h  CMakeLists.txt  CellGrid.cpp  CellGrid.h  CellTypes.h  ClickDetector.cpp  ClickDetector.h  ColrAtlas.cpp  ColrAtlas.h  ColrEncoder.cpp  ColrEncoder.h  ColrTypes.h  Config.cpp  Config.h  DebugIPC.cpp  DebugIPC.h  Document.cpp  Document.h  FontFallback.h  FontFallback_CoreText.mm  FontFallback_FontConfig.cpp  FontResolver.h  FontResolver_CoreText.mm  FontResolver_FontConfig.cpp  IGrid.h  InputEvent.h  KeyEvent.h  Layout.cpp  Layout.h  LayoutTree.cpp  LayoutTree.h  Log.cpp  Log.h  (+36 more)
src/dawn/: CMakeLists.txt  ComputeStatePool.cpp  ComputeStatePool.h  ComputeTypes.h  MetalLayer.mm  NativeSurface.cpp  NativeSurface.h  PlatformDawn.cpp  PlatformUtils_Linux.cpp  PlatformUtils_macOS.mm  Renderer.cpp  Renderer.h  TexturePool.cpp  TexturePool.h
src/eventloop/: CMakeLists.txt  EventLoop.h  FdPoller.h  Window.h
src/eventloop/bsd/: EventLoop_kqueue.h
src/eventloop/epoll/: EventLoop_epoll.cpp  EventLoop_epoll.h  FdPoller_epoll.cpp  FdPoller_epoll.h
src/eventloop/kqueue/: EventLoop_kqueue.cpp  EventLoop_kqueue.h  FdPoller_kqueue.cpp  FdPoller_kqueue.h
src/eventloop/linux/: EventLoop_epoll.cpp  EventLoop_epoll.h  Window_xcb.cpp  Window_xcb.h
src/eventloop/mac/: EventLoop_nsapp.h  EventLoop_nsapp.mm  Window_cocoa.h  Window_cocoa.mm
src/eventloop/xcb/: Window_xcb.cpp  Window_xcb.h
src/platform/: ActionRouter.cpp  ActionRouter.h  Actions.cpp  AnimationScheduler.cpp  AnimationScheduler.h  CMakeLists.txt  ComputeStatePool.cpp  ComputeStatePool.h  ComputeTypes.h  ConfigLoader.cpp  ConfigLoader.h  DBusBridge.cpp  DBusBridge.h  Debug.cpp  DragHandler.h  EventLoop.cpp  Graveyard.h  Input.cpp  InputController.cpp  InputController.h  InputTypes.h  NativeSurface.cpp  NativeSurface.h  PlatformDawn.cpp  PlatformDawn.h  PlatformUtils.h  PlatformUtils_Linux.cpp  PlatformUtils_macOS.mm  Platform_Actions.cpp  Platform_Debug.cpp  Platform_EventLoop.cpp  Platform_Input.cpp  Platform_Render.cpp  Platform_TabBar.cpp  Platform_Tabs.cpp  Render.cpp  RenderEngine.cpp  RenderEngine.h  RenderSync.h  RenderThread.cpp  (+10 more)
src/qt/: CMakeLists.txt  PlatformQt.cpp  QtWindow.cpp  QtWindow.h
src/script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngine_Terminals.cpp  ScriptFsModule.cpp  ScriptFsModule.h  ScriptLayoutBindings.cpp  ScriptLayoutBindings.h  ScriptPermissions.cpp  ScriptPermissions.h  ScriptWsModule.cpp  ScriptWsModule.h
src/shaders/: colr_rasterize.wgsl  hb-gpu-fragment.wgsl  image_quad.wgsl  msdf_text.wgsl  progress_bar.wgsl  rect.wgsl  slug_text.wgsl  terminal_compute.wgsl
src/terminal/: CMakeLists.txt  CellGrid.cpp  CellGrid.h  CellTypes.h  DCS.cpp  Document.cpp  Document.h  IGrid.h  Keyboard.cpp  KittyGraphics.cpp  KittyKeyboard.cpp  LineBuffer.cpp  LineBuffer.h  LinePosition.h  MouseAndSelection.cpp  OSC.cpp  ParseToActions.cpp  ParserAction.h  PtyMux.cpp  PtyMux.h  SGR.cpp  Terminal.cpp  Terminal.h  TerminalEmulator.cpp  TerminalEmulator.h  TerminalOptions.h  TerminalSnapshot.cpp  TerminalSnapshot.h  Utf8.h  Wcwidth.h
tests/: CMakeLists.txt  MBConnection.cpp  MBConnection.h  RenderTest.cpp  RenderTest.h  TestTerminal.h  test_archive.cpp  test_bindings.cpp  test_charset.cpp  test_cursor.cpp  test_cwd.cpp  test_decrqss.cpp  test_embedded_terminals.cpp  test_font_fallback.cpp  test_inverse.cpp  test_kitty_graphics.cpp  test_kitty_keyboard.cpp  test_layout_tree.cpp  test_linebuffer.cpp  test_modes.cpp  test_osc.cpp  test_osc_1337.cpp  test_osc_palette.cpp  test_popup.cpp  test_prompt.cpp  test_pty_mux.cpp  test_reflow.cpp  test_render.cpp  test_screen.cpp  test_scroll_region.cpp  test_scrollback.cpp  test_selection.cpp  test_sgr.cpp  test_sgr_extended.cpp  test_shaping.cpp  test_tabs.cpp  test_tabs_multibar.cpp  test_tabs_uuid.cpp  test_terminal.cpp  test_tree_shape.cpp  (+2 more)
types/: mb.d.ts
